--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/clubhouse-status-gen/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>clubhouse-gen-status</title>
-    <script type="module" crossorigin src="/assets/index.47494f0d.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.149403d9.js">
-    <link rel="stylesheet" href="/assets/index.d963c3bd.css">
+    <script type="module" crossorigin src="/clubhouse-status-gen/assets/index.47494f0d.js"></script>
+    <link rel="modulepreload" href="/clubhouse-status-gen/assets/vendor.149403d9.js">
+    <link rel="stylesheet" href="/clubhouse-status-gen/assets/index.d963c3bd.css">
   </head>
   <body>
     <div id="app"></div>
